--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
-[secrets]
-conString = "postgresql://your-username:Jaalrucaxaro1!@your-database-host:5432/your-database"
+[general]
+postgresql://postgres:Jaalrucaxaro1!@db.pqftbzxsiuoyzyopfqrq.supabase.co:5432/postgres
