--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,2 +1,2 @@
 [general]
-conString = postgresql://postgres:Jaalrucaxaro1!@db.pqftbzxsiuoyzyopfqrq.supabase.co:5432/postgres
+conString = "postgresql://postgres:Jaalrucaxaro1!@db.pqftbzxsiuoyzyopfqrq.supabase.co:5432/postgres"
